[gd_scene load_steps=4 format=3 uid="uid://px7ynjfo4xfo"]

[ext_resource type="Script" uid="uid://ch66f4qs4p5cg" path="res://Scripts/giriş.gd" id="1_rfcy0"]
[ext_resource type="Texture2D" uid="uid://cfg5ff3b7fskq" path="res://assets/backgrounds/623929.jpg" id="2_2xv74"]
[ext_resource type="PackedScene" uid="uid://cfwi5byy1usu2" path="res://Sahneler/player.tscn" id="3_rfcy0"]

[node name="Giriş" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rfcy0")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(600, 300)
scale = Vector2(0.625, 0.5)
texture = ExtResource("2_2xv74")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -239.0
offset_top = 50.0
offset_right = 239.0
offset_bottom = 149.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "Geometry Dash Op25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -21.5
offset_right = 209.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2

[node name="grup" type="CanvasGroup" parent="."]

[node name="Player" parent="grup" instance=ExtResource("3_rfcy0")]
position = Vector2(396, 108)
rotation = 4.46638e-06
script = null

[node name="next" type="Button" parent="grup/Player"]
offset_left = 31.9999
offset_top = -14.0001
offset_right = 66.9999
offset_bottom = 16.9999
text = ">"
flat = true

[node name="back" type="Button" parent="grup/Player"]
offset_left = -73.0001
offset_top = -14.9997
offset_right = -31.0001
offset_bottom = 17.0003
text = "<"
flat = true

[node name="start" type="Button" parent="grup"]
offset_left = 329.0
offset_top = 404.0
offset_right = 502.0
offset_bottom = 475.0
text = "Oyunu Başlat
"

[node name="ColorPickerButton" type="ColorPickerButton" parent="grup"]
offset_left = 377.0
offset_top = 168.0
offset_right = 420.0
offset_bottom = 201.0

[connection signal="pressed" from="grup/Player/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="grup/Player/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="grup/start" to="." method="_on_start_pressed"]
[connection signal="color_changed" from="grup/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
